syntax = "proto3";
package fishgame;

option go_package = "server/server";

message PlayerActionPing {
}

message PlayerAction {
  oneof payload {
    PlayerActionPing ping = 1;
  }
}

message GameServerUpdatePong {
}

// TODO remove this temporary game
message GameServerUpdateExample {
  int32 foo = 1;
}

message GameServerUpdate {
  oneof payload {
    GameServerUpdatePong pong = 1;
    GameServerUpdateExample example = 2;
  }
}